--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.leaflet-div-icon {
+  background: transparent;
+  border: none;
+}
+.userMarker {
+  width: 1.25rem;
+  height: 1.25rem;
+  border-radius: 50%;
+  background-color: #7ce4cf;
+  box-shadow: 0 0 3px 3px #0000001a;
+  border-color: white;
+  border-width: 1.5px;
+  position: absolute;
+  animation: pulse-animation 2s infinite;
+}
+@keyframes pulse-animation {
+  0% {
+    box-shadow: 0 0 0 0 rgba(124, 228, 207, 0.3);
+  }
+  50% {
+    box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(124, 228, 207, 0.3);
+  }
+}
